# medsci-agent

./: .gitignore  LICENSE  README.md  opencode.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: tests.yml
.opencode/agents/: ace.md  drug.md  imaging.md  medsci.md  omics.md  protein.md
.opencode/commands/: ace-learn.md  ace-strategies.md  handoff-report.md  lit-deep.md  qc-check.md  sandbox-job.md  triage.md
.opencode/plugins/: README.md  guardrails-helpers.ts  medsci-guardrails.ts
.opencode/plugins/__tests__/: guardrails-helpers.test.ts
.opencode/skills/alphafold/: SKILL.md
.opencode/skills/biopython/: SKILL.md
.opencode/skills/chembl/: SKILL.md
.opencode/skills/datamol/: SKILL.md
.opencode/skills/deepchem/: SKILL.md
.opencode/skills/esm/: SKILL.md
.opencode/skills/hypothesis-generation/: SKILL.md
.opencode/skills/literature-review/: SKILL.md
.opencode/skills/opentargets/: SKILL.md
.opencode/skills/operational-guardrails/: SKILL.md
.opencode/skills/pdb/: SKILL.md
.opencode/skills/pubmed/: SKILL.md
.opencode/skills/pydeseq2/: SKILL.md
.opencode/skills/rdkit/: SKILL.md
.opencode/skills/sandbox-execution/: SKILL.md
.opencode/skills/scanpy/: SKILL.md
.opencode/skills/uniprot/: SKILL.md
specs/: server-sandbox-mcp-spec.md
