[project]
name = "medsci-agent-python-env"
version = "0.1.0"
description = "Python environment specification for MedSci Agent sidecars"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
scientific = [
  "rdkit>=2023.9.0",
  "biopython>=1.80",
  "scanpy>=1.9.0",
  "leidenalg>=0.9.0",
  "igraph>=0.10.0",
  "pynndescent>=0.5.0",
]
paperqa = [
  "paper-qa[local]>=5.0.0",
  "litellm",
  "httpx",
  "scrapling",
  "beautifulsoup4",
]
ace = [
  "ace-framework[mcp]",
]
test = [
  "pytest>=8.0.0",
]

[tool.uv]
package = false
